--- a/Magen.html
+++ b/Magen.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" href="media-Magen.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="wow.min.js"></script>
     <script>new WOW().init(); </script>
 </head>
