--- a/Magen.html
+++ b/Magen.html
@@ -38,12 +38,13 @@
  </div>
     </nav>
     <article class="wow fadeInDown " id="move">
+       <div class="overflowbox">
     	<a href="">о компании</a>
     	<a href="">раскрытие информации</a>
     	<a href="">новости</a>
     	<a href="">информация</a>
     	<a href="MagenForms.html">Cдача показаний</a>
-    	
+       </div>
     </article>
      <section class=" foreword flex-container">
      	<h2 class="wow fadeInRight ">О нас</h2>
