--- a/MagenForms.html
+++ b/MagenForms.html
@@ -3,40 +3,38 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="MagenForms.css">
-	<link rel="stylesheet" href="Magen.css">
+	<link rel="stylesheet" href="Magen2.css">
 	<link rel="stylesheet" href="media-MagenForms.css">
+
 	<title>Сдача показаний</title>
 </head>
 <body>		
-				
-	<div class="flex-container">
-		<h1>сдача показаний</h1>
-	</div>
+	<h1 align="center">сдача показаний</h1>
     <div class=" flex-container">
        <div class="container">
 		<div class="box flex-container">
 		   <span>
-			<h3>Ваше Фамилия</h3>
-			<input type="text">
+				<h3>Фамилия</h3>
+				<input type="text">
 		   </span>
 		</div>
 		<div class="box flex-container">
 		   <span>
-			<h3>Ваше Имя</h3>
-			<input type="text">
+				<h3>Имя</h3>
+				<input type="text">
 		   </span>
 		</div>
 		<div class="box flex-container">
-			  <span>
-			<h3>Ваше Отчество</h3>
-			<input type="text">
-		   </span>
+			<span>
+				<h3>Отчество</h3>
+				<input type="text">
+		    </span>
 		</div>
 		<div class="box flex-container">
 			<input type="submit" value="ОТПРАВИТЬ">
 		</div>
 		<div class="box flex-container">
-	           <address>magen.sakha@gmail.com</address>
+	        <address>magen.sakha@gmail.com</address>
 		</div>
 	 </div>
 	</div>
