--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   	</div>
   </aside>
   <section class="flex-container">
-	  	<div class="flex-container cardconmax wow fadeIn">
+	  	<div class="flex-container cardconmax wow fadeInRight">
 	  		<div class="card-container flex-container">
 				<button>УВЕЛИЧИТЬ</button>
 				<button>ПОСМОТРЕТЬ</button>
