--- a/MagenForms.html
+++ b/MagenForms.html
@@ -5,30 +5,45 @@
 	<link rel="stylesheet" href="MagenForms.css">
 	<link rel="stylesheet" href="Magen2.css">
 	<link rel="stylesheet" href="media-MagenForms.css">
-
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Сдача показаний</title>
 </head>
 <body>		
 	<h1 align="center">сдача показаний</h1>
     <div class=" flex-container">
        <div class="container">
+       		<div class="important">
+				<h3>* - Обязательно к заполнению</h3>
+			</div>
 		<div class="box flex-container">
 		   <span>
-				<h3>Фамилия</h3>
+				<h3>Ваше ФИО *</h3>
 				<input type="text">
 		   </span>
 		</div>
 		<div class="box flex-container">
 		   <span>
-				<h3>Имя</h3>
+				<h3>Адрес *</h3>
 				<input type="text">
 		   </span>
 		</div>
 		<div class="box flex-container">
 			<span>
-				<h3>Отчество</h3>
+				<h3>Показания *</h3>
 				<input type="text">
 		    </span>
+		</div>
+		<div class="box flex-container">
+		   <span>
+				<h3>номер телефона</h3>
+				<input type="text">
+		   </span>
+		</div>
+		<div class="box flex-container">
+		   <span>
+				<h3>Почта</h3>
+				<input type="text">
+		   </span>
 		</div>
 		<div class="box flex-container">
 			<input type="submit" value="ОТПРАВИТЬ">
