--- a/MagenForms.html
+++ b/MagenForms.html
@@ -4,9 +4,12 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="MagenForms.css">
 	<link rel="stylesheet" href="Magen2.css">
-	<link rel="stylesheet" href="media-MagenForms.css">
+     <link rel="stylesheet" href="animate.css">
+   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	 <link rel="stylesheet" href="media-Magen.css">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="wow.min.js"></script>
+    <script>new WOW().init(); </script>
 	<title>Сдача показаний</title>
 </head>
 <body>	
@@ -46,9 +49,9 @@
     	<a  href="MagenForms.html">Cдача показаний</a>
   	</div>
   </aside>	
-	<h1 align="center">СДАЧА ПОККАЗАНИЙ</h1>
+	<h1 align="center" class="wow fadeInRight"> СДАЧА ПОКАЗАНИЙ</h1>
     <form class=" flex-container">
-       <div class="container">
+       <div class="container wow fadeInLeft">
        		<div class="important">
 				<h3>* - Обязательно к заполнению</h3>
 			</div>
