--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<nav class=" wow fadeInDown">
 	 <div class="flex-space" >
 	 	<h1  class="logo"  data-wow-duration="1s">magen</h1>
-	 	<div class="flex-container" >
+	 	<div class="wrap-r" >
 	 		<div class="card" >
 	  			<i class="fa fa-clock-o" aria-hidden="true"></i>
 	  			<p>Время работы:</p>
@@ -29,7 +29,7 @@
      		<div class="card">
 	  			<i class="fa fa-envelope aria-hidden="true"></i>
 	  			<p>Почта:</p>
-	  			<p>golden9208@gmail.com</p>
+	  			<p>magen.sakha@gmail.com</p>
      		</div>
      </div>
  </div>
@@ -41,13 +41,29 @@
   </div>
   <aside class="wow fadeInDown " id="move">
     <div class="overflowbox">
-    	<a class="f" href="#">о компании</a>
-    	<a class="ff" href="#">раскрытие информации</a>
-    	<a class="ffff" href="#">информация</a>
-      <a class="fff" href="#">новости</a>
+    	<a class="f" href="index.html#1">о компании</a>
+    	<a class="ff" href="index.html#2">раскрытие информации</a>
+    	<a class="ffff" href="index.html#3">информация</a>
+      <a class="fff" href="index.html#4">новости</a>
     	<a  href="MagenForms.html">Cдача показаний</a>
   	</div>
   </aside>
+  <section class="wow fadeInUp">
+        <h3 id="1" align="center">О компании</h3>
+        <div class="futuretext"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente aliquam qui, cumque, voluptates ullam neque, explicabo officia numquam alias dolores nemo! Repellendus labore animi impedit inventore explicabo vel, sit pariatur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quae inventore voluptatem nulla fugiat placeat explicabo, id quaerat repudiandae cumque, sed expedita aliquam quia ut quibusdam veniam nemo et doloribus.</p></div>
+  </section>
+  <section class="wow fadeIn" data-wow-offset=300>
+        <h3 id="2" align="center"> Раскрытие информации</h3>
+        <div class="futuretext"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente aliquam qui, cumque, voluptates ullam neque, explicabo officia numquam alias dolores nemo! Repellendus labore animi impedit inventore explicabo vel, sit pariatur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quae inventore voluptatem nulla fugiat placeat explicabo, id quaerat repudiandae cumque, sed expedita aliquam quia ut quibusdam veniam nemo et doloribus.</p></div>
+  </section>
+  <section class="wow fadeInRight">
+        <h3 id="3" align="center">Информация</h3>
+        <div class="futuretext"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente aliquam qui, cumque, voluptates ullam neque, explicabo officia numquam alias dolores nemo! Repellendus labore animi impedit inventore explicabo vel, sit pariatur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quae inventore voluptatem nulla fugiat placeat explicabo, id quaerat repudiandae cumque, sed expedita aliquam quia ut quibusdam veniam nemo et doloribus.</p></div>
+  </section>
+   <section class="wow fadeInUp">
+        <h3 id="4" align="center">Новости</h3>
+        <div class="futuretext"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente aliquam qui, cumque, voluptates ullam neque, explicabo officia numquam alias dolores nemo! Repellendus labore animi impedit inventore explicabo vel, sit pariatur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quae inventore voluptatem nulla fugiat placeat explicabo, id quaerat repudiandae cumque, sed expedita aliquam quia ut quibusdam veniam nemo et doloribus.</p></div>
+  </section>
   <section class="flex-container">
 	  	<div class="flex-container cardconmax wow fadeInRight">
 	  		<div class="card-container flex-container">
